--- a/src/main/resources/simpleci/404.html
+++ b/src/main/resources/simpleci/404.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
+
 <head>
     <title>404: Not Found</title>
 </head>
 
 <body>
-<h1>404: Not Found</h1>
+    <h1>404: Not Found</h1>
 </body>
+
 </html>
