--- a/src/main/resources/simpleci/job.html
+++ b/src/main/resources/simpleci/job.html
@@ -3,7 +3,8 @@
 <head>
     <title><% print job.name %> - SimpleCI</title>
     <link rel="stylesheet" href="/css/core.css">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/todc-bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="centered matchStrap">
 
@@ -72,6 +73,6 @@
 </table>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 </html>
