--- a/src/main/resources/simpleci/jobs.html
+++ b/src/main/resources/simpleci/jobs.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SimpleCI</title>
+    <title>Jobs | SimpleCI</title>
     <link rel="stylesheet" href="/css/core.css">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/todc-bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="matchStrap">
+<body>
 
 <nav class="navbar navbar-masthead navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header"><a class="navbar-brand" href="#">SimpleCI</a></div>
     <ul class="nav navbar-nav" id="navigate">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="/jobs">Jobs</a></li>
+        <li><a href="#">Home</a></li>
+        <li class="active"><a href="/jobs">Jobs</a></li>
     </ul>
     <ul class="nav navbar-nav pull-right" id="navigate-right">
         <li><a href="/login">Login</a></li>
     </ul>
 </nav>
-<div class="centered jumbotron">
-    <div class="container">
-        <br/>
 
-        <img src="/img/logo.png" height="200">
-    </div>
-</div>
-<table class="centered table table-bordered job-table" border="1">
-    <%
-    import com.directmyfile.ci.jobs.Job
+<table class="table table-bordered" border="1">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Status</th>
+        </tr>
+    </thead>
 
-    ci.jobs.values().each { job ->
-        println("<tr class=" + job.status.cssContextClass() + "><td><a href=\"job/${job.name}\">${job.name}</a></td></tr>")
-    }
-    %>
+    <tbody id="jobList">
+
+    </tbody>
 </table>
 
+<script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/jobs.js"></script>
 </body>
 </html>
