--- a/src/main/resources/simpleci/jobs.html
+++ b/src/main/resources/simpleci/jobs.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body class="container">
 
 <nav class="navbar navbar-masthead navbar-default navbar-fixed-top" role="navigation">
-    <div class="navbar-header"><a class="navbar-brand" href="#">SimpleCI</a></div>
+    <div class="navbar-header"><a class="navbar-brand" href="/">SimpleCI</a></div>
     <ul class="nav navbar-nav" id="navigate">
-        <li><a href="#">Home</a></li>
+        <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
         <li class="active"><a href="/jobs">Jobs</a></li>
     </ul>
     <ul class="nav navbar-nav pull-right" id="navigate-right">
