Basic Login Functionality

--- a/src/main/resources/simpleci/job.html
+++ b/src/main/resources/simpleci/job.html
@@ -21,7 +21,7 @@
 
 <h1 class="page-header job-name"></h1>
 
-<ul class="nav nav-tabs" id="info-tabs">
+<ul class="nav nav-tabs nav-tabs-google" id="info-tabs">
     <li class="active"><a href="#">History</a></li>
     <li><a href="#">Changes</a></li>
     <li><a href="#">Artifacts</a></li>
