--- a/src/main/resources/simpleci/login.html
+++ b/src/main/resources/simpleci/login.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SimpleCI</title>
+    <title>Login | SimpleCI</title>
     <link rel="stylesheet" href="/css/core.css">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/todc-bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="matchStrap">
+<body class="container">
 
-<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-    <div class="navbar-header"><a class="navbar-brand" href="#">SimpleCI</a></div>
+<nav class="navbar navbar-masthead navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header"><a class="navbar-brand" href="/">SimpleCI</a></div>
     <ul class="nav navbar-nav" id="navigate">
-        <li><a href="/">Home</a></li>
+        <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
         <li><a href="/jobs">Jobs</a></li>
     </ul>
     <ul class="nav navbar-nav pull-right" id="navigate-right">
-        <li class="active"><a href="#">Login</a></li>
+        <li><a class="active" href="/login">Login</a></li>
     </ul>
 </nav>
-<div class="centered jumbotron">
-    <div class="container">
-        <br/>
 
-        <h1>SimpleCI</h1>
+<form role="form" id="login-form">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" placeholder="Enter Username">
     </div>
-</div>
-<table class="centered table table-bordered" border="1">
-    <%
-    import com.directmyfile.ci.jobs.Job
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Enter Password">
+    </div>
+    <button class="btn btn-default">Submit</button>
+</form>
 
-    ci.jobs.values().each { job ->
-        println("<tr><td><a href=\"job/${job.name}\">${job.name}</a></td></tr>")
-    }
-    %>
-</table>
-
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/login.js"></script>
 </body>
 </html>
