--- a/src/main/resources/simpleci/login.html
+++ b/src/main/resources/simpleci/login.html
@@ -21,7 +21,7 @@
     </ul>
 </nav>
 
-<form role="form" id="login-form">
+<form class="form-horizontal" role="form" id="login-form" method="post">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" id="username" placeholder="Enter Username">
