--- a/src/main/resources/simpleci/login.html
+++ b/src/main/resources/simpleci/login.html
@@ -10,7 +10,7 @@
 
 <body class="container">
 
-<nav class="navbar navbar-masthead navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-inverse" role="navigation">
     <div class="navbar-header"><a class="navbar-brand" href="/">SimpleCI</a></div>
     <ul class="nav navbar-nav" id="navigate">
         <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
